--- a/components.json
+++ b/components.json
@@ -4,11 +4,10 @@
   "rsc": false,
   "tsx": false,
   "tailwind": {
-    "config": "tailwind.config.js",
+    "config": "tailwind.config.cjs",
     "css": "src/index.css",
     "baseColor": "slate",
-    "cssVariables": true,
-    "prefix": "yes"
+    "cssVariables": true
   },
   "aliases": {
     "components": "@/components",
