--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jspdf": "^2.5.1",
     "lucide-react": "^0.354.0",
     "luxon": "^3.4.4",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
