--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
     "html2canvas": "^1.4.1",
+    "icons": "^1.0.0",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.354.0",
     "luxon": "^3.4.4",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
