--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.28.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
